# Sandbox

./: .env.secret  .gitignore  Pipfile  notebook.ipynb  pyproject.toml  sandbox.ipynb
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
data/: chinook.db  position_salaries.csv
modules/1.working-with-data/: data.txt  sandbox.ipynb
modules/1.working-with-data/data/: chinook.db
modules/2.eda/: sandbox.ipynb
modules/2.eda/data/auto-mpg/: auto-mpg.data
modules/3.regression/: sandbox.ipynb
modules/3.regression/data/: Income2.csv
modules/4.e2e/: sandbox.ipynb
modules/5.classification/: model.pkl  sandbox.ipynb
